force-app/main/default/objects/Lodgement_Customer_Migration__c/Lodgement_Customer_Migration__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the progress of migrating customer from multiple old lodgement systems into a single API mode.</description>
    <label>Lodgement Customer Migration</label>
    <nameField>
        <displayFormat>LCM-{000000}</displayFormat>
        <label>LM Record#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lodgement Customer Migrations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>