force-app/main/default/objects/Lodgement_Customer_Migration__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Lodgement Customer Migrations</relationshipLabel>
    <relationshipName>Lodgement_Customer_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>