force-app/main/default/objects/Lodgement_Customer_Migration__c/fields/Estimated_Annualised_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annualised_Revenue__c</fullName>
    <label>Estimated Annualised Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>