force-app/main/default/objects/Lodgement_Customer_Migration__c/fields/Migration_Segment_Description__c.field-meta.xml
<CustomField>
    <fullName>Migration_Segment_Description__c</fullName>
    <inlineHelpText>Customer specific - only to be used when a customer demands a part-migration</inlineHelpText>
    <label>Migration Segment Description</label>
    <type>TextArea</type>
</CustomField>