force-app/main/default/objects/Lodgement_Customer_Migration__c/fields/Other_AusPost_Integration_Type_s__c.field-meta.xml
<CustomField>
    <fullName>Other_AusPost_Integration_Type_s__c</fullName>
    <description>Method of integration with AP/ST</description>
    <label>Thick</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freight Master</fullName>
            </value>
            <value>
                <fullName>Despatcher</fullName>
            </value>
            <value>
                <fullName>MyStarTrack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>