force-app/main/default/objects/Lodgement_Customer_Migration__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <formula>text (Legal_Entity_Name__r.Sales_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>