force-app/main/default/objects/Lodgement_Customer_Migration__c/recordTypes/Child.recordType-meta.xml
<RecordType>
    <fullName>Child</fullName>
    <active>true</active>
    <description>This is to segment each migration by integration type.</description>
    <label>Child</label>
</RecordType>