force-app/main/default/objects/Lodgement_Customer_Migration__c/recordTypes/Parent.recordType-meta.xml
<RecordType>
    <fullName>Parent</fullName>
    <active>true</active>
    <description>This is used for the top level migration and can have multiple child migrations under it.</description>
    <label>Parent</label>
</RecordType>