force-app/main/default/objects/Lodgement_Customer_Migration__c/validationRules/Required_Fields_On_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_On_Complete</fullName>
    <active>true</active>
    <description>When the Status is &quot;Complete&quot;. Please complete 
-Checked TEAM - First Manifest Completed	
-Written Approval Gained To Use API	
-Handover To BAU Completed	
-Contract Signed
-Pricing Approved	
-API Test Keys Provided	
-API Production Keys Provided</description>
    <errorConditionFormula>AND( 
 ISPICKVAL( Status__c , &quot;Complete&quot;), 
 RecordType.DeveloperName = &quot;Child&quot;, 
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
 $Permission.LCM_Admin = FALSE,
$Permission.LCM_Support = FALSE, 
$Permission.Lodgement_Migration_Data_Permission = FALSE,
OR( 
 Checked_TEAM_First_Manifest_Completed__c = FALSE,
 Written_Approval_Gained_To_Use_API__c = FALSE,
 Handover_Completed__c = FALSE,
 ISBLANK(API_Test_Keys_Provided__c),
 ISBLANK(API_Production_Keys_Provided__c),
 NOT(ISPICKVAL(Contract_Signed__c , &quot;Completed&quot;)),
 NOT(ISPICKVAL(Pricing_Approved__c, &quot;Completed&quot;))   
)
)</errorConditionFormula>
    <errorMessage>When the Status is &quot;Complete&quot;. Please complete 
-Checked TEAM - First Manifest Completed	
-Written Approval Gained To Use API	
-Handover To BAU Completed	
-Contract Signed
-Pricing Approved	
-API Test Keys Provided	
-API Production Keys Provided</errorMessage>
</ValidationRule>