force-app/main/default/objects/Lodgement_Customer_Migration__c/validationRules/Required_Fields_On_Customer_Commitment.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_On_Customer_Commitment</fullName>
    <active>true</active>
    <description>When the Status is &quot;Customer Commitment&quot;. Please complete 
- Business Contact 
- IT Contact.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &quot;Customer Commitment&quot;),
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Permission.LCM_Admin = FALSE,
$Permission.LCM_Support = FALSE,
$Permission.Lodgement_Migration_Data_Permission = FALSE,
 OR(
  ISBLANK(IT_Contact__c),
  ISBLANK(Contact__c ) 
)
)</errorConditionFormula>
    <errorMessage>When the Status is &quot;Customer Commitment&quot;. Please complete 
- Business Contact 
- IT Contact.</errorMessage>
</ValidationRule>