force-app/main/default/objects/Lodgement_Customer_Migration__c/validationRules/Required_Fields_On_Deferred.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_On_Deferred</fullName>
    <active>true</active>
    <description>When the status is deferred, the Re-engagement must not be blank.</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Status__c , &quot;Deferred&quot;), 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Permission.LCM_Admin = FALSE,
$Permission.LCM_Support = FALSE,
$Permission.Lodgement_Migration_Data_Permission = FALSE,
ISBLANK(Deferred_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Deferred_Date__c</errorDisplayField>
    <errorMessage>When the Status is &quot;Deferred&quot;. Please complete 
- Re-engagement Date.</errorMessage>
</ValidationRule>