force-app/main/default/objects/Lodgement_Customer_Migration__c/validationRules/Required_Fields_On_Migration_in_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_On_Migration_in_Progress</fullName>
    <active>true</active>
    <description>When the Status is &quot;Migration in Progress&quot;. 
Please complete 
- Revised Migration Completion Date
- Customer Migration Requirements</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &quot;Migration In Progress&quot;),
  RecordType.DeveloperName = &quot;Child&quot;,
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Permission.LCM_Admin = FALSE,
$Permission.LCM_Support = FALSE,
$Permission.Lodgement_Migration_Data_Permission = FALSE,
 OR(
  ISBLANK( Revised_Migration_Completion_Date__c ),
  ISBLANK( Customer_Migration_Requirements__c ) 
)
)</errorConditionFormula>
    <errorMessage>When the Status is &quot;Migration in Progress&quot;. 
Please complete 
- Revised Migration Completion Date
- Customer Migration Requirements</errorMessage>
</ValidationRule>