force-app/main/default/objects/Lodgement_Customer_Migration__c/validationRules/Required_Fields_On_Migration_Planning.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_On_Migration_Planning</fullName>
    <active>true</active>
    <description>When the Status is &quot;Migration Planning&quot;. 
Please complete 
- Commenced Commercial Conversations
- Agreed Migration Start Date
- Planned Migration Completion Date
- Handover Completed</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &quot;Migration Planning&quot;),
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Permission.LCM_Admin = FALSE,
$Permission.LCM_Support = FALSE,
$Permission.Lodgement_Migration_Data_Permission = FALSE,
 OR(
  ISBLANK(Commenced_Commercial_Conversations__c ),
  ISBLANK(Target_Go_Live_Date__c ),
  ISBLANK(Planned_Migration_Completion__c ),
  Handover_Completed__c = FALSE  
)
)</errorConditionFormula>
    <errorMessage>When the Status is &quot;Migration Planning&quot;. 
Please complete 
- Commenced Commercial Conversations
- Agreed Migration Start Date
- Planned Migration Completion Date
- Handover Completed</errorMessage>
</ValidationRule>