force-app/main/default/objects/Lodgement_Customer_Migration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>IT_Contact__c</columns>
    <columns>Customer_Readiness__c</columns>
    <columns>Additonal_Comments__c</columns>
    <columns>Risk_Of_Loss_Of_Business__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>