force-app/main/default/objects/Lodgement_Customer_Migration__c/listViews/Lodgement_Customer_Migration_Lodgement_Customer_Migration.listView-meta.xml
<ListView>
    <fullName>Lodgement_Customer_Migration_Lodgement_Customer_Migration</fullName>
    <filterScope>Queue</filterScope>
    <label>Lodgement Customer Migration</label>
    <queue>Lodgement_Customer_Migration</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>