force-app/main/default/objects/Lodgement_Customer_Migration__c/listViews/My_Org_s_LCM_To_Be_Reviewed.listView-meta.xml
<ListView>
    <fullName>My_Org_s_LCM_To_Be_Reviewed</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Readiness__c</columns>
    <columns>Additonal_Comments__c</columns>
    <columns>Risk_Of_Loss_Of_Business__c</columns>
    <columns>Account_Manager_Involvement__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sales Introduction</value>
    </filters>
    <label>My Org&apos;s LCM - To Be Reviewed</label>
    <language>en_US</language>
</ListView>